# google_workspace_mcp

./: .dockerignore  .dxtignore  .env.oauth21  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  GEMINI.md  GMAIL_MESSAGE_THREAD_ID_FIX.md  GMAIL_THREAD_IMPLEMENTATION.md  LICENSE  README.md  SECURITY.md  authentication.py  calendar_service_sample.py  docker-compose.yml  fastmcp_server.py  google_workspace_mcp.dxt  google_workspace_mcp_guide.md  install_claude.py  main.py  manifest.json  mcp_concepts.txt  pyproject.toml  smithery.yaml  with_inspector.sh
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ruff.yml
auth/: __init__.py  auth_info_middleware.py  callback_server.py  cors_security_middleware.py  credential_store.py  external_oauth_provider.py  fastmcp_google_auth.py  google_auth.py  google_auth_improved.py  google_remote_auth_provider.py  mcp_oauth21_bridge.py  mcp_session_middleware.py  oauth21_google_bridge.py  oauth21_integration.py  oauth21_session_store.py  oauth_callback_server.py  oauth_common_handlers.py  oauth_config.py  oauth_error_handling.py  oauth_manager.py  oauth_responses.py  oauth_types.py  scopes.py  service_decorator.py  service_decorator_oauth21.py.bak  session_context.py  vscode_compatibility_middleware.py
auth/initial_oauth21/: compat.py  jwt.py  middleware.py  oauth2.py
auth/oauth21/: __init__.py  compat.py  config.py  discovery.py  example_config.py  handler.py  http.py  sessions.py  tokens.py
config/: google_config.py
core/: __init__.py  api_enablement.py  comments.py  config.py  context.py  log_formatter.py  schema_modifier.py  server.py  streamable_http.py  tool_registry.py  tool_tier_loader.py  tool_tiers.yaml  utils.py
gcalendar/: __init__.py  calendar_tools.py
gchat/: __init__.py  chat_tools.py
gdocs/: docs_helpers.py  docs_structure.py  docs_tables.py  docs_tools.py
gdocs/managers/: __init__.py  batch_operation_manager.py  header_footer_manager.py  table_operation_manager.py  validation_manager.py
gdrive/: drive_file_permissions.py  drive_helpers.py  drive_tools.py
gforms/: __init__.py  forms_tools.py
gmail/: __init__.py  gmail_tools.py
google_workspace_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gsearch/: search_tools.py
gsheets/: __init__.py  sheets_tools.py
gslides/: slides_tools.py
gtasks/: __init__.py  tasks_tools.py
helm-chart/workspace-mcp/: Chart.yaml  README.md  values.yaml
helm-chart/workspace-mcp/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  poddisruptionbudget.yaml  secret.yaml  service.yaml  serviceaccount.yaml
